--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@vercel/analytics": "^1.3.1",
     "@vercel/kv": "^2.0.0",
     "ai": "^3.3.17",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "fit-file-parser": "^1.20.0",
@@ -41,6 +42,7 @@
     "openai": "^4.56.0",
     "prisma": "^5.19.1",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-intersection-observer": "^9.10.3",
